force-app/integration/default/objects/Test_Child_Object__c/Test_Child_Object__c.object-meta.xml
<CustomObject>
    <label>Test Child Object</label>
    <nameField>
        <label>Test Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Child Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>