force-app/integration/default/objects/Test_Child_Object__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Test Children</relationshipLabel>
    <relationshipName>Test_Children</relationshipName>
    <type>Lookup</type>
</CustomField>