force-app/integration/default/objects/Test_Child_Object__c/fields/Test_Parent__c.field-meta.xml
<CustomField>
    <fullName>Test_Parent__c</fullName>
    <label>Test Parent</label>
    <referenceTo>Test_Parent_Object__c</referenceTo>
    <relationshipLabel>Test Children</relationshipLabel>
    <relationshipName>Test_Children</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>